fix: Füge contain und overflow: hidden zu #ansprache hinzu, da manchmal horizontaler overflow da war

--- a/sass/inhalt/ansprache/_ansprache.sass
+++ b/sass/inhalt/ansprache/_ansprache.sass
@@ -6,6 +6,8 @@
 	--color: rgba(128, 128, 128, .3)
 	background-image: linear-gradient(to right, var(--color) 1px, transparent 1px), linear-gradient(to bottom, var(--color) 1px, transparent 1px)
 	background-size: 6vmin 6vmin
+	contain: content
+	overflow: hidden
 	h3
 		font-size: 3rem
 		font-style: normal
